bug fix, spacing between navbar and top section was wrong after fixing the navbar position. increased the margin to account for fixed navbar.

--- a/Andrew-Marks-Portfolio-Website/css/style.css
+++ b/Andrew-Marks-Portfolio-Website/css/style.css
@@ -374,7 +374,7 @@ Large screens
         max-width: 86vw;
         min-height: 400px;
         margin-left: 7vw;
-        margin-top: 36px;
+        margin-top: 120px;
         box-shadow: var(--bs);
     }
 
